--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,13 @@
-- sensor:
+# Template sensor converting from MWh to kWh
+- trigger:
+    # - trigger: time_pattern
+    #   minutes: /1
+    - trigger: state
+      entity_id: sensor.bitshakesmr_lguh50_mwh_count
+#   condition:
+#     - condition: template
+#       value_template: "{{ is_number(states('sensor.bitshakesmr_lguh50_mwh_count')) }}"
+  sensor:
     - name: "heat meter total"
       unique_id: 0639d954-edef-4598-9a77-aac3c4f5d098
       icon: "mdi:counter"
@@ -6,11 +15,18 @@
       device_class: energy
       state_class: total_increasing
       state: >
-        {{ states('sensor.bitshakesmr_lguh50_mwh_count') | float(0)  * 1000 }}
+        {{ states('sensor.bitshakesmr_lguh50_mwh_count') | float * 1000 }}
       availability: >
-        {{ states('sensor.bitshakesmr_lguh50_mwh_count') | float(0) * 1000 > 2000 }}
+        {% set current = states('sensor.bitshakesmr_lguh50_mwh_count') %}
+        {{ current not in ['unknown', 'unavailable'] and is_number(current) and current | float * 1000 > 2000 }}
 
-- sensor:
+# Template sensor converting from MWh to kWh
+- trigger:
+    # - trigger: time_pattern
+    #   minutes: /1
+    - trigger: state
+      entity_id: sensor.bitshakesmr_lguh50_mwh_count_year
+  sensor:
     - name: "heat meter total last year"
       unique_id: dbdcd95e-169e-4dbd-9022-c314e1017d60
       icon: "mdi:counter"
@@ -18,9 +34,10 @@
       device_class: energy
       state_class: total_increasing
       state: >
-        {{ states('sensor.bitshakesmr_lguh50_mwh_count_year') | float(0)  * 1000 }}
+        {{ states('sensor.bitshakesmr_lguh50_mwh_count_year') | float * 1000 }}
       availability: >
-        {{ states('sensor.bitshakesmr_lguh50_mwh_count_year') | float(0) * 1000 > 2000 }}
+        {% set current = states('sensor.bitshakesmr_lguh50_mwh_count_year') %}
+        {{ current not in ['unknown', 'unavailable'] and is_number(current) and current | float * 1000 > 2000 }}
 
 - sensor:
     - name: "heat consumption current year"
@@ -32,32 +49,19 @@
       state: >
         {% set current = states('sensor.heat_meter_total') | float %}
         {% set last_year = states('sensor.heat_meter_total_last_year') | float %}
-        {{ current - last_year | float(2) }}
+        {{ current - last_year | float  }}
       availability: >
         {% set current = states('sensor.heat_meter_total') %}
         {% set last_year = states('sensor.heat_meter_total_last_year') %}
-        {{ current != 'unavailable' and is_number(current) and float(current) > 0 and last_year != 'unavailable' and is_number(last_year) and float(last_year) > 0 and (float(current) - float(last_year) > 0) }}
-
-- sensor:
-    - name: "heat consumption current year (projection)"
-      unique_id: 37423765-879d-421b-854c-63b7ce17edd8
-      icon: "mdi:counter"
-      unit_of_measurement: "kWh"
-      device_class: energy
-      state_class: total
-      state: >
-        {% set average = states('sensor.heat_consumption_current_year_daily_average') | float %}
-        {{ average * 365 }}
-      availability: >
-        {% set average = states('sensor.heat_consumption_current_year_daily_average') %}
-        {{ average not in ['unknown', 'unavailable'] and is_number(average) }}
-
+        {{ current not in ['unknown', 'unavailable'] and is_number(current) and float(current) > 0 and last_year not in ['unknown', 'unavailable'] and is_number(last_year) and float(last_year) > 0 and (float(current) - float(last_year) > 0) }}
 
 - trigger:
-    - trigger: time_pattern
-      minutes: /1
+    # - trigger: time_pattern
+    #   minutes: /1
+    - trigger: state
+      entity_id: sensor.heat_consumption_daily
   sensor:
-    - name: "heat consumption daily average (year)"
+    - name: "heat consumption current year daily average"
       unique_id: 2acc4031-2210-4383-a3d2-0c9b1610dbfb
       unit_of_measurement: "kWh"
       device_class: energy
@@ -72,6 +76,7 @@
       availability: >
         {% set current = states('sensor.heat_consumption_current_year') %}
         {% set change = states('sensor.heat_consumption_daily') %}
+        {{ current not in ['unknown', 'unavailable'] and is_number(current) and change not in ['unknown', 'unavailable'] and is_number(change) }}
         {{ current != 'unavailable' and is_number(current) and change != 'unavailable' and is_number(change) }}
 
 - sensor:
@@ -96,4 +101,5 @@
       state: >
         {{ states('sensor.wattwaechter_8666_power_current') | int | abs }}
       availability: >
-        {{ states('sensor.wattwaechter_8666_power_current') != 'unavailable' }}
+        {% set current = states('sensor.wattwaechter_8666_power_current') %}
+        {{ current not in ['unknown', 'unavailable'] and is_number(current) }}
